A lot of fiddling

--- a/Core/App/Views/EditableTest.html
+++ b/Core/App/Views/EditableTest.html
@@ -18,7 +18,7 @@
 
     <h3 style="color: #F44336;margin: 0;margin-bottom: 15px;">My profile</h3>
     <card>
-        <edit params="{PersonId:15}">
+        <edit params="{PersonId:15}" entity="Person">
             <card-header title="My Profile">
                 <card-header-link edit-action type="edit" ng-show="!state.isEditMode">!!!</card-header-link>
             </card-header>
